# MailRuTestTask

./: README.md  conftest.py  pyproject.toml
config/: default.yaml  test.yaml
converter/: __main__.py  db.py  main.py  routes.py  schemas.py  settings.py  views.py
tests/: test_convert.py  test_insert.py
